'Enter' date and block

--- a/issues/templates/issue_edit.html
+++ b/issues/templates/issue_edit.html
@@ -32,7 +32,7 @@
                                 Blocked
                             </span>
                             <span class="block-description" style="margin-left: 5px; color: #e5e5e5;">
-                                {% if issue.motiuBloqueig != 'None' %}
+                                {% if issue.motiuBloqueig %}
                                     {{issue.motiuBloqueig}}
                                 {% endif %}
                             </span>
@@ -353,19 +353,21 @@
 
                         </div>
                         <!-- selector d'assignacio -->
-                        <div>
-                            <select id="selectAssig" name="assignat" type="submit" class="status-button" style="display: none;">
-                                {% for assig in possibles_assignats %}
-                                    <option value="{{assig.user.id}}">{{assig.user.username}}</option>
-                                {% endfor %}
-                            </select>
-                            <button id="btnSaveAssig" type="submit" name="guardar_assignat" style="display: none;"></button>
-                        </div>
+                        
                         <div class="ticket-users-actions">
+                            <div>
+                                <select id="selectAssig" name="assignat" type="submit" class="status-button" style="display: none; max-width: 170px;">
+                                    <option>+ Add assigned</option>
+                                    {% for assig in possibles_assignats %}
+                                        <option value="{{assig.user.id}}">{{assig.user.username}}</option>
+                                    {% endfor %}
+                                </select>
+                                <button id="btnSaveAssig" type="submit" name="guardar_assignat" style="display: none;"></button>
+                            </div>
                             <button id="addAssigned" class="ticket-users-actions" style="margin-right: 10px;">
                                 + Add assigned
                             </button>
-                            <button type="submit" name="autoassignar" class="ticket-users-actions">
+                            <button type="submit" name="autoassignar" class="ticket-users-actions" style="margin-left: 5px;">
                                 {% if ets_assignat  %}
                                     Dont assign to me
                                 {% else %}
@@ -388,12 +390,12 @@
                             <ul>
                                 {%  for obs in issue.observadors.all %}
                                     <li>
-                                        <div style="display: flex; justify-content: space-between; margin-left: 5px; margin-right: 5px;">
+                                        <div style="display: flex; justify-content: space-between; margin-left: 5px; margin-right: 5px; margin-top: 5px;">
                                             <img src="{{ obs.avatar.url }}"
                                                 width="60px"
                                                 height="60px"
                                             >
-                                            <a href="/usuaris/{{ obs.user.id }}" style="margin-right: 15px;">{{ obs.user.first_name }}</a>
+                                            <a href="/usuaris/{{ obs.user.id }}" style="margin-right: 120px; margin-top: 20px;">{{ obs.user.first_name }}</a>
                                             <a href="{% url 'esborrar_observador' issue.id obs.user.id %}">
                                                 <i class="fa fa-times" aria-hidden="true"></i>
                                             </a>
@@ -404,6 +406,7 @@
                         </div>
                         <div>
                             <select id="selectObs" name="observador" type="submit" class="status-button" style="display: none;">
+                                <option>+ Add watchers</option>
                                 {% for obs in possibles_observadors %}
                                     <option value="{{obs.user.id}}">{{obs.user.username}}</option>
                                 {% endfor %}
@@ -520,12 +523,12 @@
         event.preventDefault();
         if (selectAssig.style.display === 'none') {
             selectAssig.style.display = 'flex';
+            addAssigned.style.display = 'none';
         }
         else {
             selectAssig.style.display = 'none';
         }
     })
-
     selectAssig.addEventListener('change', function() {
         btnSaveAssig.click();
     });
@@ -596,6 +599,12 @@
         datePickerInput.style.display = 'block';
         btnSaveDateDirect.style.display = 'block';
     });
+    datePickerInput.addEventListener('keypress', function(e){
+        if (e.key === 'Enter') {
+            event.preventDefault();
+            btnSaveDateDirect.click();
+        }
+    })
 
     var btnBloqueig = document.getElementById('btnBloqueig');
     var inputMotiuBloqueig = document.getElementById('inputMotiuBloqueig');
@@ -611,12 +620,12 @@
             inputMotiuBloqueig = '""';
         }
     })
-    /*
-    inputMotiuBloqueig.addEventListener('blur', function() {
-        event.preventDefault();
-        btnSaveMotiuBloqueig.click();
-    });
-    */
+    inputMotiuBloqueig.addEventListener('keypress', function(e){
+        if (e.key === 'Enter') {
+            event.preventDefault();
+            btnSaveMotiuBloqueig.click();
+        }
+    })
 
 </script>
 
