Afegit fer logout

--- a/usuaris/templates/usuaris_perfil.html
+++ b/usuaris/templates/usuaris_perfil.html
@@ -29,6 +29,7 @@
                 <button type="submit" name="guardar_avatar_defecte" class="botonMenu">
                     <p style="color: #1e96b1;"> &nbsp &nbsp Avatar per defecte</p>
                 </button>
+                
             </div>  
             <!--Info usuari i canviar bio-->
             <div class="project-details-form-data"> 
@@ -53,6 +54,10 @@
                         Guardar
                     </button>
                 </fieldset>
+                <br>
+                    <a href="/usuaris/logout">
+                        <p style="color: #1e96b1; margin-left: 380px;"> &nbsp &nbsp Tancar sessió</p>
+                    </a>
             </div>
         </form>
    </section> 
