--- a/usuaris/templates/usuaris_perfil.html
+++ b/usuaris/templates/usuaris_perfil.html
@@ -39,11 +39,11 @@
                 </fieldset>
                 <fieldset>
                     <label for="email">Email</label>
-                    <input type="text" name="username" value="{{ usuari.user.email }}">
+                    <input type="text" name="email" value="{{ usuari.user.email }}">
                 </fieldset>
                 <fieldset>
                     <label for="first_name">Nom</label>
-                    <input type="text" name="username" value="{{ usuari.user.first_name }}">
+                    <input type="text" name="first_name" value="{{ usuari.user.first_name }}">
                 </fieldset>
                 <fieldset>
                     <label for="bio">Bio</label>
