--- a/issues/templates/issue_edit.html
+++ b/issues/templates/issue_edit.html
@@ -199,7 +199,7 @@
                                                     {% elif log.tipus == "Attachment esborrat" %}
                                                         <div class="diff-status-wrapper" style="margin-top: 20px;">
                                                             <span style="background-color: #e2e3e9; font-weight: bold;" class="key">Deleted attachment: </span>
-                                                            <span style="margin-left: 5px;" class="diff">{{log.valor_antic}}</span>    
+                                                            <span style="margin-left: 5px;" class="diff">{{log.valor_previ}}</span>    
                                                         </div>
                                                     {% elif log.tipus == "Tag afegida" %}
                                                         <div class="diff-status-wrapper" style="margin-top: 20px;">
@@ -209,7 +209,7 @@
                                                     {% elif log.tipus == "Tag esborrada" %}
                                                         <div class="diff-status-wrapper" style="margin-top: 20px;">
                                                             <span style="background-color: #e2e3e9; font-weight: bold;" class="key">Tags removed: </span>
-                                                            <span style="margin-left: 5px;" class="diff">{{log.valor_antic}}</span>    
+                                                            <span style="margin-left: 5px;" class="diff">{{log.valor_previ}}</span>    
                                                         </div>
                                                     {% else %}
                                                         <div class="diff-status-wrapper" style="margin-top: 20px;">
