--- a/issues/templates/issue_form.html
+++ b/issues/templates/issue_form.html
@@ -6,7 +6,7 @@
             <i class="fa fa-times" aria-hidden="true"></i>
         </a>
         <div> 
-            <form method="post" >
+            <form method="post" enctype="multipart/form-data">
                 {% csrf_token %}
                 <h2 class="title">New issue</h2>
                 
