--- a/issues/templates/issue_list.html
+++ b/issues/templates/issue_list.html
@@ -719,7 +719,7 @@
                                                 <i class="fa fa-lock" aria-hidden="true"></i>
                                             </div>
                                             {%endif%}
-                                            {% if issue.dataLimit != null%}
+                                            {% if issue.dataLimit %}
                                             <div class="due-date">
                                                 <i class="fa fa-clock-o" aria-hidden="true"></i>
                                             </div>
