--- a/usuaris/templates/usuaris_perfil.html
+++ b/usuaris/templates/usuaris_perfil.html
@@ -19,13 +19,12 @@
                     <img src="{{ usuari.avatar.url }}" style="width: 180px; height: 180px;">
                 </fieldset>
                 <div>
-                    <label for="files" class="btn"><i class="fa fa-plus" aria-hidden="true"></i></label>
-                    <input id="files" style="visibility:hidden;" type="file" value="+" name="avatar">
+                    <button id="btnSelectImg" type="text" variant="secondary" class="btn-small button-full js-change-avatar">
+                        Canviar foto
+                    </button>
+                    <input id="avatarImg" style="display: none;" type="file" name="avatar">
                 </div>
-                <button type="submit" variant="secondary" title="Guardar avatar" name="guardar_avatar" class="btn-small button-full js-change-avatar">
-                    <i aria-hidden="true"></i>
-                    Canviar foto
-                </button>
+                <button type="submit" id="btnSaveAvatar" style="display: none;" name="guardar_avatar" class="btn-small button-full js-change-avatar">    </button>
                 <button type="submit" name="guardar_avatar_defecte" class="botonMenu">
                     <p style="color: #1e96b1;"> &nbsp &nbsp Avatar per defecte</p>
                 </button>
@@ -76,16 +75,16 @@
 }
 </style>
 <script>
-var addAttachment = document.getElementById('addAttachment');
-    var afegirAttachment = document.getElementById('afegirAttachment');
-    var inputFile = document.getElementById('inputFile');
+    var btnSelectImg = document.getElementById('btnSelectImg');
+    var btnSaveAvatar = document.getElementById('btnSaveAvatar');
+    var avatarImg = document.getElementById('avatarImg');
 
-    addAttachment.addEventListener('click', function() {
+    btnSelectImg.addEventListener('click', function() {
         event.preventDefault();
-        inputFile.click();
+        avatarImg.click();
     })
-    inputFile.addEventListener('change', function() {
-        afegirAttachment.click();
+    avatarImg.addEventListener('change', function() {
+        btnSaveAvatar.click();
     })
 </script>
 
