--- a/issues/templates/issue_list.html
+++ b/issues/templates/issue_list.html
@@ -682,24 +682,30 @@
                                 </td>
                                 
                                 <td class="assigned-field" style="text-align: center;
-                                vertical-align: middle;">   
+                                vertical-align: middle;"> 
+                                <div style="display:flex; flex-direction: row;">
+                                <img class="issue-assignedto" src="{{issue.assignacio.avatar.url}}" style="width: 25PX; height: 25PX;"></img>  
                                 <form method="post">
                                     {% csrf_token %}
                                     <input type="hidden" name="id_issue" value="{{issue.id}}">
-                                    <select id="selectAssig{{issue.id}}" onchange="document.getElementById('btnSaveAssig{{issue.id}}').click() "name="assignat" type="submit" class="assigned-button" style="margin-top: 5px; border:none; outline:none;background: none;">
+                                    <select id="selectAssig{{issue.id}}" onchange="document.getElementById('btnSaveAssig{{issue.id}}').click() "name="assignat" type="submit" class="status-button" style="margin-top: 5px; border:none; outline:none;background: none;">
                                         <option value="0">
                                             no avatar</option>
                                         {% for usuari in usuaris %}
+                                        {%with usuari.user.id|stringformat:"s" as id%}
                                         {% if issue.assignacio.user.id == usuari.user.id %}
-                                            <option selected="selected" value="{{usuari.user.id}}">{{usuari.user.username}}</option>
+                                        
+                                            <option selected="selected" value="{{id}}">{{usuari.user.username}}</option>
                                         {%else%}
-                                                <option value="{{usuari.user.id}}">{{usuari.user.username}}</option>
+                                                <option value="{{id}}">{{usuari.user.username}}</option>
+                                        
                                         {%endif%}
+                                        {%endwith%}
                                         {% endfor %}
                                     </select>
                                     <button id="btnSaveAssig{{issue.id}}" type="submit"  name="guardar_assignat" style="display: none;"></button>
                                     </form>
-                                    <img class="issue-assignedto" src="{{issue.assignacio.avatar.url}}"></img>
+                                </div>
                                     
                                 </td>
                                 
