Solucionem bug navbar en navegar pels usuaris

--- a/issuePeople/templates/navbar.html
+++ b/issuePeople/templates/navbar.html
@@ -11,7 +11,7 @@
             </div>
             <div class="nav-right">
                 <a href="{% url 'perfil' %}" title="Usuari" class="logo">
-                    <img alt="Avatar" src="{{ usuari.avatar.url }}" style="width: 32px; height: 32px;">
+                    <img alt="Avatar" src="{{ logged_usuari.avatar.url }}" style="width: 32px; height: 32px;">
                 </a>
             </div>
         </nav>
