--- a/issues/templates/issue_list.html
+++ b/issues/templates/issue_list.html
@@ -727,7 +727,7 @@
     function modif_url(param,value,int){
         var trobat = false;
         
-        if(window.location.pathname =="/issues/"){
+        if( window.location.href == window.location.hostname+"/issues/"){
             window.location.href = window.location.href+"?"+param+"="+value
         }
         else{
