--- a/issuePeople/templates/base.html
+++ b/issuePeople/templates/base.html
@@ -6,6 +6,8 @@
     <title>IssuePeople</title>
     <link rel="stylesheet" type="text/css" href="{% static 'css/theme-taiga.css' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="shortcut icon" href="https://issuestorage.s3.us-west-2.amazonaws.com/static/imatge/logo_IssuePeople.png" type="image/png">
+    <link rel="icon" href="https://issuestorage.s3.us-west-2.amazonaws.com/static/imatge/logo_IssuePeople.png" type="image/png">
     {% block extra_head %}{% endblock %}
 </head>
 <body>
