--- a/issues/templates/issue_list.html
+++ b/issues/templates/issue_list.html
@@ -726,8 +726,7 @@
     
     function modif_url(param,value,int){
         var trobat = false;
-        console.log()
-        if(window.location.href.length == (window.location.hostname+"/issues/").length){
+        if(window.location.href.length == (window.location.hostname+"/issues/")){
             window.location.href = window.location.href+"?"+param+"="+value
         }
         else{
